--- a/Donum/ClientApp/angular.json
+++ b/Donum/ClientApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "HelloWorld": {
+    "Donum": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -72,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "HelloWorld:build:production"
+              "browserTarget": "Donum:build:production"
             },
             "development": {
-              "browserTarget": "HelloWorld:build:development",
+              "browserTarget": "Donum:build:development",
               "proxyConfig": "proxy.conf.js"
             }
           },
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "HelloWorld:build"
+            "browserTarget": "Donum:build"
           }
         },
         "test": {
@@ -132,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "HelloWorld"
+  "defaultProject": "Donum",
+  "cli": {
+    "analytics": false
+  }
 }
