--- a/Donum/Properties/launchSettings.json
+++ b/Donum/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "HelloWorld": {
+    "Donum": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7182;http://localhost:5151",
