--- a/Donum/appsettings.json
+++ b/Donum/appsettings.json
@@ -11,7 +11,7 @@
     },
   "IdentityServer": {
     "Clients": {
-      "HelloWorld": {
+      "Donum": {
         "Profile": "IdentityServerSPA"
       }
     }
